# Qlue-ls

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  justfile  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-test-publish.yml
crates/lazy-sparql-result-reader/: .gitignore  Cargo.toml  README.md
crates/lazy-sparql-result-reader/fuzz/: Cargo.toml
crates/lazy-sparql-result-reader/fuzz/fuzz_targets/: result_reader.rs
crates/lazy-sparql-result-reader/src/: lib.rs  parser.rs  sparql.rs
crates/ntriples-parser/: .gitignore  Cargo.toml
crates/ntriples-parser/src/: lexer.rs  lib.rs
crates/parser/: Cargo.toml  LICENCE  README.md
crates/parser/src/: lib.rs  rules.rs  syntax_kind.rs  tests.rs  utils.rs
crates/parser/src/ast/: mod.rs  tests.rs
crates/parser/src/parser/: grammar.rs  mod.rs  tests.rs
crates/parser/src/syntax_kind/: generated.rs
crates/sparql/: Cargo.toml
crates/sparql-parser/: Cargo.toml  build.rs  sparql12.ungram
crates/sparql-parser/generator/: mod.rs
crates/sparql-parser/src/: lib.rs  rules.rs  tests.rs  utils.rs
crates/sparql-parser/src/ast/: mod.rs  tests.rs
crates/sparql-parser/src/parser/: grammar.rs  mod.rs  tests.rs
crates/sparql-parser/src/syntax_kind/: generated.rs
crates/sparql-parser/tests/: parse_tree.rs
crates/sparql-parser/tests/snapshots/: parse_tree__auto_detect_ask.snap  parse_tree__error_recovery_garbage.snap  parse_tree__error_recovery_incomplete_select.snap  parse_tree__error_recovery_incomplete_select_clause.snap  parse_tree__insert_data.snap  parse_tree__select_simple.snap  parse_tree__select_with_prefix.snap
crates/sparql/src/: results.rs
docs/: Containerfile  mkdocs.yml
docs/docs/: 01_getting_started.md  02_capabilities.md  02_getting_started.md  03_capabilities.md  03_configuration.md  04_configuration.md  05_completion_queries.md  06_completion_queries.md  07_development.md  07_lsp_extensions.md  capabilities.md  configuration.md  index.md  migration.md  standalone_formatter.md
docs/src/: SUMMARY.md  configuration.md  introduction.md
editor/: Containerfile  package-lock.json  package.json  qlue-ls.yaml  vite.config.ts
editor/src/: app.css
editor/src/lib/: backends.json  backends.ts  backends.yaml  config.ts  languageServer.worker.ts
editor/src/routes/: +page.svelte  backend.svelte  backendPicker.svelte  editor.svelte  statusbar.svelte  tree.svelte
extract_backends/: all.yaml  extract.nu  transformed.yaml
parser/: Cargo.toml
parser/generator/: mod.rs
parser/src/: lib.rs  tests.rs  utils.rs
parser/src/ast/: mod.rs  tests.rs
parser/src/syntax_kind/: generated.rs
src/: lib.rs  main.rs  stdio_reader.rs
src/server/: analysis.rs  anaysis.rs  capabilities.rs  common.rs  configuration.rs  fetch.rs  mod.rs  sparql_operations.rs  state.rs  tools.rs
src/server/lsp/: capabilities.rs  errors.rs  rpc.rs  textdocument.rs
src/server/lsp/capabilities/: mod.rs  server.rs
src/server/lsp/messages/: command.rs  diagnostic.rs  initialize.rs  mod.rs  qlue_ls_execute.rs  qluels_addbackend.rs  qluels_executequery.rs  qluels_getbackend.rs  qluels_jump.rs  qluels_listbackends.rs  qluels_operationType.rs  qluels_parsetree.rs  qluels_setbackend.rs  textdocument_codeaction.rs  textdocument_completion.rs  textdocument_diagnostic.rs  textdocument_didchange.rs  textdocument_document_highlight.rs  textdocument_folding_range.rs  textdocument_formatting.rs  textdocument_hover.rs  textdocument_on_type_formatting.rs  textdocument_references.rs  textdocument_rename.rs  textdocument_semantic_tokens.rs
src/server/message_handler/: commands.rs  hovering.rs  indent.rs  lifecycle.rs  misc.rs  mod.rs  parse_tree.rs  textdocument_synchronization.rs  textdocument_syncronization.rs  workspace.rs
src/server/message_handler/backend/: mod.rs
src/server/message_handler/cancel/: mod.rs
src/server/message_handler/code_action/: add_aggregate_to_result.rs  add_to_result.rs  filter_var.rs  filter_var_lang.rs  iri.rs  mod.rs  quickfix.rs  same_subject.rs  select.rs
src/server/message_handler/common/: mod.rs
src/server/message_handler/completion/: blank_node_object.rs  blank_node_property.rs  context.rs  error.rs  graph.rs  mod.rs  object.rs  order_condition.rs  predicate.rs  select_binding.rs  service_url.rs  snippets.rs  solution_modifier.rs  start.rs  subject.rs  tests.rs  utils.rs  variable.rs
src/server/message_handler/diagnostic/: auto_fix_prefixes.rs  duplicate_prefix_declaration.rs  groupby_star_selection.rs  invalid_projection_variable.rs  mod.rs  same_subject.rs  syntax_error.rs  syntax_errors.rs  uncompacted_uri.rs  undeclared_prefix.rs  ungrouped_select_variable.rs  unused_prefix.rs  unused_prefix_declaration.rs
src/server/message_handler/document_highlight/: mod.rs
src/server/sparql_operations/: mod.rs  native.rs  utils.rs  wasm.rs
src/server/tools/: curies.rs  mod.rs  tera.rs
src/sparql/: results.rs
tests/: completion.rs  diagnostics.rs  formatting.rs  formatting_file_based.rs  jump.rs  on_type_formatting.rs  parse_tree.rs
tests/formatting/cases/: README.md
tests/harness/: helpers.rs  mod.rs
(+308 files in other folders)
