[package]
name = "qlue-ls"
version = "2.5.4"
edition = "2024"
authors = ["Ioannis Nezis <ioannis@nezis.de>"]
description = "A language server for SPARQL"
repository = "https://github.com/IoannisNezis/qlue-ls"
license-file = "LICENSE"
keywords = ["SPARQL", "rdf", "lsp", "lsp-server", "wasm"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "qlue-ls"
path = "src/main.rs"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
integration-tests = []

[dependencies]
# logging
log = "0.4.21"

# json
serde = "1.0.203"
serde_json = "1.0.145"
serde_repr = "0.1.19"

# custom SPARQL parser
ll-sparql-parser = "2.0.7"

# URI compression
curies = "0.1.3"

# Templating
tera = { version = "1.20.0", default-features = false }

# misc
indoc = "2.0.5"
text-size = "1.1.1"
futures = "0.3.31"
regex = "1.11.1"
urlencoding = "2.1.3"
unicode-width = "0.2.1"
lazy-sparql-result-reader = { features = ["call_from_rust"], version = "2.0.3" }
# lazy-sparql-result-reader = { path = "/home/ianni/code/lazy-sparql-result-reader/", features = [
# "call_from_rust",
# ] }
ntriples-parser = "2.0.0"
# ntriples-parser = { path = "./crates/ntriples-parser/" }

# WASM (wasm-bindgen needed for both targets due to #[wasm_bindgen] attributes)
wasm-bindgen = "0.2.108"

# Native-only dependencies
[target.'cfg(not(target_family = "wasm"))'.dependencies]
log4rs = { version = "1.3.0" }
tokio = { version = "1.44.1", features = ["full"] }
dirs-next = "2.0.0"
clap = { version = "4.5.16", features = ["derive"] }
camino = "1.1.9"
config = "0.15.0"
notify = "8.0.0"
reqwest = { version = "0.13.0", features = ["json", "form"] }

# WASM-only dependencies
[target.'cfg(target_family = "wasm")'.dependencies]
wasm-logger = { version = "0.2.0" }
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = [
	"ReadableStream",
	"ReadableStreamDefaultReader",
	"WritableStream",
	"WritableStreamDefaultWriter",
	"Window",
	"Request",
	"Response",
	"RequestInit",
	"RequestMode",
	"Headers",
	"WorkerGlobalScope",
	"AbortSignal",
	"AbortController",
	"DomException",
	"Performance",
] }
js-sys = "0.3.85"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.4", features = ["wasm_js"] }
serde-wasm-bindgen = "0.6.5"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dev-dependencies]
insta = { version = "1.40", features = ["json", "redactions"] }
wiremock = "0.6"
pretty_assertions = "1.4"
toml = "1.0.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
