[package]
name = "sparql"
version = "0.1.0"
edition = "2021"
authors = ["Ioannis Nezis <ioannis@nezis.de>"]
description = "SPARQL utils for Qlue-ls"
repository = "https://github.com/IoannisNezis/qlue-ls"
keywords = ["SPARQL", "rdf"]
license = "MIT"


[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
