[package]
name = "lazy-sparql-result-reader-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0.145"

[dependencies.lazy-sparql-result-reader]
path = ".."
features = ["arbitrary"]

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "result_reader"
path = "fuzz_targets/result_reader.rs"
test = false
doc = false
bench = false
